@@ -1822,14 +1822,14 @@ namespace MCForge
 
             message = message.Replace("$irc", Server.ircServer + " > " + Server.ircChannel);
 
-            foreach (string customdollarsstring in Server.customdollars)
+            foreach (var customReplacement in Server.customdollars)
             {
-                if (!customdollarsstring.StartsWith("//"))
+                if (!customReplacement.Key.StartsWith("//"))
                 {
                     string oldmessage = message;
                     try
                     {
-                        message = message.Replace(customdollarsstring.Split(':')[0], customdollarsstring.Split(':')[1]);
+                        message = message.Replace(customReplacement.Key, customReplacement.Value);
                     }
                     catch
                     {
