@@ -3,6 +3,7 @@ Pending Changes
 - Updater should no longer crash when updating (Github issue #3)
 - /zz no longer shows an error when using "/zz blockname" (Github issue #7)
 - Player, Level, and Server now use an ExtrasCollection member named "Extras" to help manage extra data needed by custom commands
+- Custom $ replacements are now possible via file text/custom$s.txt
 
 v4.6.0.1
 - Command thread will no longer be manually aborted, as this can sometimes cause problems closing the socket.
